--- a/Microsoft.Extensions.Logging.WithProperty/Microsoft.Extensions.Logging.WithProperty.csproj
+++ b/Microsoft.Extensions.Logging.WithProperty/Microsoft.Extensions.Logging.WithProperty.csproj
@@ -15,8 +15,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
-        <PackageReference Include="Nerdbank.GitVersioning" Version="3.1.91" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.0.0" />
+        <PackageReference Include="Nerdbank.GitVersioning" Version="3.1.91" PrivateAssets="all" />
     </ItemGroup>
 
 </Project>
