--- a/XeonApps.Extensions.Logging.WithProperty/XeonApps.Extensions.Logging.WithProperty.csproj
+++ b/XeonApps.Extensions.Logging.WithProperty/XeonApps.Extensions.Logging.WithProperty.csproj
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <PackageId>Microsoft.Extensions.Logging.WithProperty</PackageId>
+        <PackageId>XeonApps.Extensions.Logging.WithProperty</PackageId>
         <Authors>Viktor Nikolaev</Authors>
         <Description>
             This package allows you to add custom properties to Microsoft's logger when using structured logging
         </Description>
         <PackageTags>logging;structured logging;logger;microsoft</PackageTags>
         <RepositoryUrl>https://github.com/viktor-nikolaev/Microsoft.Extensions.Logging.WithProperty</RepositoryUrl>
-        <RootNamespace>Microsoft.Extensions.Logging.WithProperty</RootNamespace>
+        <RootNamespace>XeonApps.Extensions.Logging.WithProperty</RootNamespace>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
