--- a/XeonApps.Extensions.Logging.WithProperty/XeonApps.Extensions.Logging.WithProperty.csproj
+++ b/XeonApps.Extensions.Logging.WithProperty/XeonApps.Extensions.Logging.WithProperty.csproj
@@ -9,14 +9,15 @@
         </Description>
         <PackageTags>logging;structured logging;logger;microsoft</PackageTags>
         <RepositoryUrl>https://github.com/viktor-nikolaev/Microsoft.Extensions.Logging.WithProperty</RepositoryUrl>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <RootNamespace>XeonApps.Extensions.Logging.WithProperty</RootNamespace>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.0.0" />
-        <PackageReference Include="Nerdbank.GitVersioning" Version="3.1.91" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.0.0"/>
+        <PackageReference Include="Nerdbank.GitVersioning" Version="3.1.91" PrivateAssets="all"/>
     </ItemGroup>
 
 </Project>
