--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: publish to nuget
 on:
   push:
     branches:
-      - f/EAP-3450-dynamo-db
+      - master
 
 jobs:
   build:
@@ -14,12 +14,12 @@ jobs:
 
       - name: Build solution and generate NuGet package
         run: |
-          cd Microsoft.Extensions.Logging.WithProperty
+          cd XeonApps.Extensions.Logging.WithProperty
           dotnet pack -c Release -o out
 
       - name: Push generated package to GitHub registry
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_AUTH_TOKEN}} 
         run: >
-          dotnet nuget push ./Microsoft.Extensions.Logging.WithProperty/out/*.nupkg
+          dotnet nuget push ./XeonApps.Extensions.Logging.WithProperty/out/*.nupkg
           --skip-duplicate --no-symbols true
