--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,3 +25,4 @@ jobs:
         run: >
           dotnet nuget push ./XeonApps.Extensions.Logging.WithProperty/out/*.nupkg
           --skip-duplicate --no-symbols true
+          --source https://api.nuget.org/v3/index.json
