--- a/XeonApps.Extensions.Logging.WithProperty/XeonApps.Extensions.Logging.WithProperty.csproj
+++ b/XeonApps.Extensions.Logging.WithProperty/XeonApps.Extensions.Logging.WithProperty.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
         <PackageId>XeonApps.Extensions.Logging.WithProperty</PackageId>
         <Authors>Viktor Nikolaev</Authors>
         <Description>
